[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Credits/Credits.tscn" type="PackedScene" id=1]
[ext_resource path="res://Themes/MainMenuTheme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Original/Music/Godot_55_-_Do_Androids_Dream_-_Music_Credits_-_Demo_1.mp3" type="AudioStream" id=3]
[ext_resource path="res://Scenes/Credits/EndCredits.gd" type="Script" id=4]

[node name="EndCredits" instance=ExtResource( 1 )]
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="VBoxContainer" parent="ScrollContainer" index="0"]
margin_bottom = 2073.0

[node name="RichTextLabel" parent="ScrollContainer/VBoxContainer" index="1"]
margin_bottom = 1045.0
focus_mode = 0

[node name="FooterSpace" parent="ScrollContainer/VBoxContainer" index="2"]
margin_top = 1049.0
margin_bottom = 2073.0

[node name="CenterContainer" type="CenterContainer" parent="." index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EndMessagePanel" type="Panel" parent="CenterContainer" index="0"]
unique_name_in_owner = true
visible = false
margin_left = 332.0
margin_top = 240.0
margin_right = 692.0
margin_bottom = 360.0
rect_min_size = Vector2( 360, 120 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/EndMessagePanel" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ThankPlayer" type="Label" parent="CenterContainer/EndMessagePanel/VBoxContainer" index="0"]
margin_right = 360.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Thanks for playing"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/EndMessagePanel/VBoxContainer" index="1"]
margin_top = 62.0
margin_right = 360.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/EndMessagePanel/VBoxContainer/CenterContainer" index="0"]
margin_left = 108.0
margin_top = 18.0
margin_right = 252.0
margin_bottom = 40.0
size_flags_vertical = 3
custom_constants/separation = 24

[node name="MenuButton" type="Button" parent="CenterContainer/EndMessagePanel/VBoxContainer/CenterContainer/HBoxContainer" index="0"]
margin_right = 60.0
margin_bottom = 28.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Menu"

[node name="ExitButton" type="Button" parent="CenterContainer/EndMessagePanel/VBoxContainer/CenterContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
margin_left = 84.0
margin_right = 144.0
margin_bottom = 28.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Exit"

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource( 3 )
autoplay = true
bus = "Music"

[connection signal="pressed" from="CenterContainer/EndMessagePanel/VBoxContainer/CenterContainer/HBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="CenterContainer/EndMessagePanel/VBoxContainer/CenterContainer/HBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
